--- a/Lixur Protocol/requirements.txt
+++ b/Lixur Protocol/requirements.txt
@@ -1,4 +1,4 @@
-﻿argon2-cffi==21.3.0
+argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 atomicwrites==1.4.0
 attrs==21.4.0
@@ -36,7 +36,6 @@ netifaces==0.11.0
 networkx==2.6.3
 ntplib==0.4.0
 numpy==1.21.5
-numba==0.55.1
 p2pnetwork==1.1
 packaging==21.3
 pandas==1.1.5
@@ -51,6 +50,16 @@ pyaes==1.6.1
 pycparser==2.21
 pycryptodome==3.12.0
 Pygments==2.11.2
+pyp2p==0.8.2
+pyparsing==3.0.6
+pyroute2==0.6.5
+pyroute2.core==0.6.5
+pyroute2.ethtool==0.6.5
+pyroute2.ipdb==0.6.5
+pyroute2.ipset==0.6.5
+pyroute2.ndb==0.6.5
+pyroute2.nftables==0.6.5
+pyroute2.nslink==0.6.5
 pytest==6.2.5
 python-dateutil==2.8.2
 pytz==2021.3
@@ -66,6 +75,8 @@ termcolor==1.1.0
 toml==0.10.2
 tqdm==4.62.3
 twine==3.7.1
+Twisted==21.7.0
+twisted-iocpsupport==1.0.2
 typing==3.7.4.3
 typing_extensions==4.0.1
 urllib3==1.26.7
