--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+# If you have problems with .gitignore (where it doesn't ignore it), see this...
+# https://stackoverflow.com/questions/37677275/gitignore-didnt-ignore-files/73146346#73146346
+
 chain/target/
 crypto/target/
 main/target/
-
-# If you have problems with .gitignore (where it doesn't ignore it), see this...
-# https://stackoverflow.com/questions/37677275/gitignore-didnt-ignore-files/73146346#73146346
+notes/
+chain/chain/chain.json
+.gitignore
+notes/notes.txt
