--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "project"
+name = "chain"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,6 +13,10 @@ thousands = "0.2.0"
 random_choice = "0.3.2"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
+
+[lib]
+name = "chain"
+path = "src/chain.rs"
 
 [[bin]]
 name = "chain"
