--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -10,7 +10,7 @@ crypto = { path = "../crypto" }
 chrono = "0.4.19"
 sha2 = "0.10.2"
 thousands = "0.2.0"
-random_choice = "0.3.2"
+rand = "0.8.4"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
 
